# SpaceManager

./: SETUP_WSL.md  check_tables.py  cleanup_db.py  create_tables.py  create_tables.sql  docker-compose.yml  drop_all_tables.py  reproduce_403.py  verify_auth.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_tables.py  check_tenant_tables.py  check_users.py  cleanup_db.py  create_tables.py  diagnose_db.py  drop_alembic.py  pyproject.toml  setup_test_data.py  test_complete_flow.py  test_detailed.py  test_final_output.txt  test_fresh_org.py  test_output.txt  test_output_detailed.txt  test_results.txt  test_space_creation.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py  tenant_schema.py
backend/app/middleware/: tenant.py
backend/app/models/: __init__.py  base.py  member.py  reservation.py  space.py  tenant.py  token.py  user.py
backend/app/schemas/: __init__.py  auth.py  org.py  reservation.py  space.py  user.py
backend/app/workers/: broker.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 20251127_2055_2eed375c519c_initial_migration.py  20251128_1856_e1f5a55dd9c1_refactor_auth.py  20251129_1820_4ba8d763d3da_fix_datetime_timezone_columns.py  20251129_1820_9b59452df32a_fix_token_expires_at_timezone.py  20251129_1839_06f9a76e8661_add_timezone_to_reservation_datetimes.py  (+1 more)
backend/scripts/: migrate_tenant_schemas.py  verify_db_alignment.py
backend/tests/: conftest.py  test_auth.py  test_orgs.py  test_reservations.py  test_spaces.py
frontend/: .gitignore  (+8 more)
(+35 files in other folders)
